--- a/Sold/task-info.yaml
+++ b/Sold/task-info.yaml
@@ -124,6 +124,9 @@ files:
         }
     }
   learner_created: false
-feedback_link: https://hyperskill.org/projects/138/stages/736/implement#comment
-status: Unchecked
+feedback_link: https://hyperskill.org/learn/step/11365#comment
+status: Solved
+feedback:
+  message: Congratulations!
+  time: Thu, 14 Apr 2022 20:18:39 UTC
 record: -1
