Finish Cinema Project xD

--- a/Menu, please/task-info.yaml
+++ b/Menu, please/task-info.yaml
@@ -339,5 +339,8 @@ files:
     }
   learner_created: false
 feedback_link: https://hyperskill.org/learn/step/11367#comment
-status: Unchecked
-record: -1
+status: Solved
+feedback:
+  message: Congratulations!
+  time: Sat, 30 Apr 2022 23:02:04 UTC
+record: 4
