--- a/Tickets/task-info.yaml
+++ b/Tickets/task-info.yaml
@@ -298,5 +298,8 @@ files:
     }
   learner_created: false
 feedback_link: https://hyperskill.org/learn/step/11366#comment
-status: Unchecked
-record: -1
+status: Solved
+feedback:
+  message: Congratulations!
+  time: Sat, 23 Apr 2022 21:28:37 UTC
+record: 3
