--- a/Errors/task-info.yaml
+++ b/Errors/task-info.yaml
@@ -612,5 +612,9 @@ files:
     }
   learner_created: false
 feedback_link: https://hyperskill.org/learn/step/11368#comment
-status: Unchecked
+status: Solved
+feedback:
+  message: Well done! You've finished the project. Select a new project on <a href="https://hyperskill.org/projects">JetBrains
+    Academy</a> to continue learning.
+  time: Sun, 01 May 2022 17:01:07 UTC
 record: -1
